# helmet

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
.pi/todos/: 13d175df-33b9-4bf8-8750-d633ecab44b5.json
.trx/: config.toml  events.jsonl  issues.jsonl
crates/helmet-api/: Cargo.toml
crates/helmet-api/src/: main.rs
crates/helmet-bench/: Cargo.toml
crates/helmet-bench/src/: main.rs
crates/helmet-cli/: Cargo.toml
crates/helmet-cli/src/: main.rs
crates/helmet-core/: Cargo.toml
crates/helmet-core/benches/: guard_hot_path.rs
crates/helmet-core/src/: config.rs  error.rs  heuristics.rs  lib.rs  paths.rs  policy.rs  preprocess.rs  threats.rs
crates/helmet-core/tests/: config_tests.rs  guard_integration_tests.rs  heuristics_tests.rs  paths_tests.rs  preprocess_tests.rs  threats_tests.rs
crates/helmet-mcp/: Cargo.toml
crates/helmet-mcp/src/: main.rs
crates/helmet-tui/: Cargo.toml
crates/helmet-tui/src/: main.rs
docs/architecture/: six-layer-defense-design.md
docs/benchmark/: detection-benchmark-spec.md
docs/research/: skillspector-comparison.md
examples/: config.schema.json  config.toml  custom_patterns.toml
scripts/: fetch-bench-data.sh  new-cli.sh  perf-budgets.toml  perf-gate.sh
