[workspace]
resolver = "2"
members = [
  "crates/helmet-core",
  "crates/helmet-cli",
  "crates/helmet-tui",
  "crates/helmet-mcp",
  "crates/helmet-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/byteowlz/helmet"

[workspace.dependencies]
# Shared across workspace
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
config = { version = "0.15", features = ["toml"] }
dirs = "5.0"
shellexpand = "3.1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# API/HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Internal crates
helmet-core = { path = "crates/helmet-core" }

[workspace.lints.clippy]
# Enable pedantic group for comprehensive checks
pedantic = { level = "warn", priority = -1 }

# === THE GUARDRAILS (Critical for AI Agents) ===
# Panic safety - agents must handle errors, not crash
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"

# The "no cheating" rule
allow_attributes = "deny"

# Code hygiene - no debug leftovers
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "warn"
print_stderr = "warn"

# === ASYNC SAFETY ===
await_holding_lock = "deny" # Prevents deadlocks

# === PROCESS SAFETY ===
exit = "deny" # Libraries shouldn't exit

# === PEDANTIC RELAXATIONS ===
# These are too noisy for most projects
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
