[package]
name = "helmet-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "helmet-api"
path = "src/main.rs"

[dependencies]
helmet-core.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
