[package]
name = "helmet-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "helmet-cli"
path = "src/main.rs"

[dependencies]
helmet-core.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
