[package]
name = "helmet-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
log.workspace = true
config.workspace = true
shellexpand.workspace = true

# Pattern matching
regex = "1.11"
base64 = "0.22"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "guard_hot_path"
harness = false
