[package]
name = "helmet-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "helmet-mcp"
path = "src/main.rs"

[dependencies]
helmet-core.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
